# gcmake-example-project

./: CMakeLists.txt  README.md  cmake_data.json  main.cpp  matrix_main.cpp  matrix_main_2.cpp  not_linked_main.cpp
dep/include/matrices/: Matrix.hpp
include/: QuickHeader.hpp
include/math/: Doubler.hpp  Halver.hpp
include/printing/: Hello.hpp  Moo.hpp
src/: QuickHeader.cpp
src/math/: Doubler.cpp  Halver.cpp
src/printing/: Hello.cpp  Moo.cpp
